// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Box 1`] = `
<div
  className="css-1xi4blx"
/>
`;

exports[`renders Container 1`] = `
<div
  className="css-19qqkc9-Container"
/>
`;

exports[`renders Flex 1`] = `
<div
  className="css-80zs6q"
/>
`;

exports[`renders Footer 1`] = `
<footer
  className="css-1d8xoy2-Footer"
/>
`;

exports[`renders Header 1`] = `
<header
  className="css-wt9q2b-Header"
/>
`;

exports[`renders Layout 1`] = `
<div
  className="css-bybl85-Layout"
/>
`;

exports[`renders Main 1`] = `
<div
  className="css-6mqgjm-Main"
/>
`;
